--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@types/html-to-text": "^9.0.4",
+    "cohere-ai": "^7.17.1",
+    "groq-sdk": "^0.26.0",
+    "html-to-text": "^9.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "webextension-polyfill": "^0.12.0",
     "wxr": "^0.1.2"
   },
@@ -25,6 +30,7 @@
     "@types/react-dom": "^19.1.3",
     "@types/webextension-polyfill": "^0.12.3",
     "@wxt-dev/module-react": "^1.1.3",
+    "dotenv": "^17.2.0",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
