--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ stats-*.json
 .wxt
 web-ext.config.ts
 
+# Environment Variables
+.env
+.env.local
+.env.*
+!.env.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
