--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "wiki-extension-ai",
   "description": "manifest.json description",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
     "dev:firefox": "wxt -b firefox",
-    "build": "wxt build",
+    "build": "wxt build ",
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
@@ -15,11 +15,15 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@boundaryml/baml": "^0.205.0",
     "@google/genai": "^1.14.0",
+    "@solvers-hub/llm-json": "^0.1.7",
     "@types/html-to-text": "^9.0.4",
+    "ajv": "^8.17.1",
     "cohere-ai": "^7.17.1",
     "groq-sdk": "^0.26.0",
     "html-to-text": "^9.0.5",
+    "jsonrepair": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
