--- a/package.json
+++ b/package.json
@@ -15,27 +15,19 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
-    "@boundaryml/baml": "^0.205.0",
     "@google/genai": "^1.14.0",
-    "@solvers-hub/llm-json": "^0.1.7",
     "@types/html-to-text": "^9.0.4",
-    "ajv": "^8.17.1",
     "cohere-ai": "^7.17.1",
-    "groq-sdk": "^0.26.0",
     "html-to-text": "^9.0.5",
     "jsonrepair": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "webextension-polyfill": "^0.12.0",
-    "wxr": "^0.1.2"
+    "react-error-boundary": "^6.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
-    "@types/webextension-polyfill": "^0.12.3",
-    "@wxt-dev/module-react": "^1.1.3",
-    "dotenv": "^17.2.0",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
