--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@wxt-dev/module-react": "^1.1.5",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
