--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.14.0",
-    "openai": "^4.68.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.5.1",
+    "openai": "^4.68.4"
   }
 }
-
-
