--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "WikiQuiz - AI Study Tool",
   "description": "Generate content-specific quizzes from any Wikipedia article",
   "private": true,
-  "version": "1.2.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -30,6 +30,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@wxt-dev/module-react": "^1.1.5",
+    "baseline-browser-mapping": "^2.9.11",
     "typescript": "^5.8.3",
     "wxt": "^0.20.6"
   }
